Deal with issues in code inspection

--- a/.env-dev
+++ b/.env-dev
@@ -13,6 +13,9 @@ DATABASE_DB=data_flow
 DATA_DIR=/dataflow_data/
 CSGHUB_ENDPOINT=http://sbezfy.natappfree.cc
 
+#Label Studio API URL
+STUDIO_JUMP_URL=https://opencsg.com/user/login1/
+
 MAX_WORKERS=99
 RAY_ADDRESS=auto
 RAY_ENABLE=False
