--- a/.env-prd
+++ b/.env-prd
@@ -12,6 +12,10 @@ DATABASE_DB=data_flow
 ############
 DATA_DIR=/data/dataflow_data
 CSGHUB_ENDPOINT=https://hub.opencsg.com
+
+#Label Studio API URL
+STUDIO_JUMP_URL=https://opencsg.com/user/login1/
+
 MAX_WORKERS=99
 RAY_ADDRESS=auto
 RAY_ENABLE=False
