1.Add Label Studio configuration 2.Modify the connection address of the Label Studio service 3.Modify the initialization task template SQL 4.Remove some unnecessary code

--- a/.env-prd
+++ b/.env-prd
@@ -8,13 +8,24 @@ DATABASE_PORT=5432
 DATABASE_DB=data_flow
 
 ############
+# Redis - You can change these for Redis database url
+############
+REDIS_HOST_URL=redis://:redis123456@net-power.9free.com.cn:18122
+
+############
+# MongoDB - You can change these for MongoDB database url
+############
+MONG_HOST_URL=mongodb://root:example@net-power.9free.com.cn:18123
+
+
+############
 # API - Configuration for API Server.
 ############
 DATA_DIR=/data/dataflow_data
 CSGHUB_ENDPOINT=https://hub.opencsg.com
 
 #Label Studio API URL
-STUDIO_JUMP_URL=https://opencsg.com/user/login1/
+STUDIO_JUMP_URL=https://opencsg.com
 
 MAX_WORKERS=99
 RAY_ADDRESS=auto
@@ -22,6 +33,13 @@ RAY_ENABLE=False
 RAY_LOG_DIR=/home/yons/demo/output
 API_SERVER=0.0.0.0
 API_PORT=8000
+
+############
+# File Upload - Configuration for file upload functionality.
+############
+UPLOAD_MAX_FILE_SIZE=104857600
+UPLOAD_ALLOWED_EXTENSIONS=.jpg,.jpeg,.png,.gif,.bmp,.webp,.svg
+
 
 ############
 # Tool_ENV - Configuration for data tools.
