update host name of redis and mongdb

--- a/docker-compose-stg.yml
+++ b/docker-compose-stg.yml
@@ -58,8 +58,8 @@ services:
       - DATABASE_PASSWORD=postgres
       - DATABASE_HOSTNAME=dataflow_postgres_db
       - DATABASE_PORT=5432
-      - REDIS_HOST_URL=redis://172.19.5.50:16379
-      - MONG_HOST_URL=mongodb://root:example@172.19.5.50:27017
+      - REDIS_HOST_URL=redis://dataflow_celery_redis:16379
+      - MONG_HOST_URL=mongodb://root:example@dataflow_celery_redis:27017
     ports:
       - "8001:8001"
     depends_on:
@@ -87,8 +87,8 @@ services:
       - DATABASE_HOSTNAME=dataflow_postgres_db
       - DATABASE_PORT=5432
       - STUDIO_JUMP_URL=https://data-label.opencsg.com
-      - REDIS_HOST_URL=redis://172.19.5.50:16379
-      - MONG_HOST_URL=mongodb://root:example@172.19.5.50:27017
+      - REDIS_HOST_URL=redis://dataflow_celery_redis:16379
+      - MONG_HOST_URL=mongodb://root:example@dataflow_celery_redis:27017
     ports:
       - "8000:8000"
     depends_on:
