--- a/docker-compose-stg.yml
+++ b/docker-compose-stg.yml
@@ -2,7 +2,7 @@ services:
 
   dataflow_postgres_db:
     restart: unless-stopped
-    image: opencsg-registry.cn-beijing.cr.aliyuncs.com/opencsg_public/csghub/postgres:15.10
+    image: opencsg-registry.cn-beijing.cr.aliyuncs.com/opencsghq/postgres:15.10
     volumes:
       - /root/dataflow/dataflow-v2/postgres_db_data:/var/lib/postgresql/data
     command: -p 5432
@@ -40,7 +40,7 @@ services:
 
   dataflow_celery_worker:
     restart: unless-stopped
-    image: opencsg-registry.cn-beijing.cr.aliyuncs.com/opencsghq/dataflow-celery:20250814
+    image: opencsg-registry.cn-beijing.cr.aliyuncs.com/opencsghq/dataflow-celery:20250816
     command: >
       sh -c "
         MILLISECOND_TIMESTAMP=$$(date +%s%3N);
@@ -77,7 +77,7 @@ services:
 
   dataflow_api_server:
     restart: unless-stopped
-    image: opencsg-registry.cn-beijing.cr.aliyuncs.com/opencsghq/dataflow:20250814
+    image: opencsg-registry.cn-beijing.cr.aliyuncs.com/opencsghq/dataflow:20250816
     volumes:
       - /root/dataflow/dataflow-v2/apidata:/data/dataflow_data
     environment:
