--- a/docker-compose-stg.yml
+++ b/docker-compose-stg.yml
@@ -111,7 +111,36 @@ services:
       - dataflow_celery_worker
     networks:
       - csg-network
-
+  dataflow_label_studio:
+    stdin_open: true
+    tty: true
+    build: .
+    image: opencsg-registry.cn-beijing.cr.aliyuncs.com/opencsghq/label-studio:latest
+    restart: unless-stopped
+    expose:
+      - "8002"
+    depends_on:
+      - dataflow_postgres_db
+    environment:
+      - DJANGO_DB=default
+      - POSTGRE_NAME=postgres
+      - POSTGRE_USER=postgres
+      - POSTGRE_PASSWORD=postgres
+      - POSTGRE_PORT=5432
+      - POSTGRE_HOST=dataflow_postgres_db
+      - LABEL_STUDIO_HOST=${LABEL_STUDIO_HOST:-}
+      - JSON_LOG=1
+      - LABEL_STUDIO_HOST=0.0.0.0
+      - CSG_HUB_ENDPOINT= https://hub.opencsg-stg.com
+      - LABEL_STUDIO_PORT=8002
+  #    - LOG_LEVEL=DEBUG
+    volumes:
+      - /root/dataflow/dataflow-v2/label-studio:/label-studio/data:rw
+    ports:
+      - "8002:8002"
+    command: label-studio
+    networks:
+      - csg-network
 networks:
   csg-network:
     driver: bridge
