Fix the bug of dataflow with ID #34

--- a/.env-dev
+++ b/.env-dev
@@ -77,3 +77,7 @@ WORKFLOW_TTL_AFTER_SUCCESS=120
 WORKFLOW_TTL_AFTER_FAILURE=3600
 WORKFLOW_POD_GC_STRATEGY=OnWorkflowCompletion
 
+
+#Mineru URL
+MINERU_API_URL: http://111.4.242.20:30000
+
