--- a/.env-prd
+++ b/.env-prd
@@ -73,3 +73,7 @@ WORKFLOW_MEMORY_LIMIT=4Gi
 # user
 WORKFLOW_RUN_AS_USER=0
 WORKFLOW_RUN_AS_GROUP=0
+
+
+#Mineru URL
+MINERU_API_URL: http://111.4.242.20:30000
