--- a/docker-compose-prd.yml
+++ b/docker-compose-prd.yml
@@ -66,6 +66,7 @@ services:
       - DATABASE_PORT=5432
       - REDIS_HOST_URL=redis://dataflow_celery_redis:6379
       - MONG_HOST_URL=mongodb://root:example@dataflow_mongo_db:27017
+      - MINERU_API_URL=http://111.4.242.20:30000
     ports:
       - "8001:8001"
     depends_on:
