--- a/.env-stg
+++ b/.env-stg
@@ -79,3 +79,7 @@ WORKFLOW_POD_GC_STRATEGY=OnWorkflowCompletion
 # user
 WORKFLOW_RUN_AS_USER=0
 WORKFLOW_RUN_AS_GROUP=0
+
+
+#Mineru URL
+MINERU_API_URL: http://111.4.242.20:30000
