增加环境变量和测试minerU的测试文件

--- a/.env-dev
+++ b/.env-dev
@@ -79,5 +79,6 @@ WORKFLOW_POD_GC_STRATEGY=OnWorkflowCompletion
 
 
 #Mineru URL
-MINERU_API_URL: http://111.4.242.20:30000
+MINERU_API_URL=http://111.4.242.20:30000
+MINERU_BACKEND=http-client
 
