--- a/.env-stg
+++ b/.env-stg
@@ -82,4 +82,5 @@ WORKFLOW_RUN_AS_GROUP=0
 
 
 #Mineru URL
-MINERU_API_URL: http://111.4.242.20:30000
+MINERU_API_URL=http://111.4.242.20:30000
+MINERU_BACKEND=http-client
