--- a/docker-compose-prd.yml
+++ b/docker-compose-prd.yml
@@ -40,7 +40,7 @@ services:
 
   dataflow_celery_worker:
     restart: unless-stopped
-    image: opencsg-registry.cn-beijing.cr.aliyuncs.com/opencsghq/dataflow:1.12.0
+    image: opencsg-registry.cn-beijing.cr.aliyuncs.com/opencsghq/dataflow:20251130
     command: >
       sh -c "
         MILLISECOND_TIMESTAMP=$$(date +%s%3N);
@@ -80,7 +80,7 @@ services:
     stdin_open: true
     tty: true
     build: .
-    image: opencsg-registry.cn-beijing.cr.aliyuncs.com/opencsghq/label-studio:1.12.0
+    image: opencsg-registry.cn-beijing.cr.aliyuncs.com/opencsghq/label-studio:20251130
     restart: unless-stopped
     expose:
       - "8002"
@@ -98,7 +98,6 @@ services:
       - LABEL_STUDIO_HOST=0.0.0.0
       - CSGHUB_ENDPOINT= https://hub.opencsg.com
       - LABEL_STUDIO_PORT=8002
-  #    - LOG_LEVEL=DEBUG
     volumes:
       - /data/v2/label-studio:/label-studio/data:rw
     ports:
@@ -109,7 +108,7 @@ services:
 
   dataflow_api_server:
     restart: unless-stopped
-    image: opencsg-registry.cn-beijing.cr.aliyuncs.com/opencsghq/dataflow:1.12.0
+    image: opencsg-registry.cn-beijing.cr.aliyuncs.com/opencsghq/dataflow:20251130
     command: >
       sh -c "
         uvicorn data_server.main:app --host 0.0.0.0 --port 8000
@@ -131,7 +130,7 @@ services:
       - DATABASE_PASSWORD=postgres
       - DATABASE_HOSTNAME=dataflow_postgres_db
       - DATABASE_PORT=5432
-      - STUDIO_JUMP_URL=http://xxxx:8002
+      - STUDIO_JUMP_URL=http://8.152.218.254:8002
       - REDIS_HOST_URL=redis://dataflow_celery_redis:6379
       - MONG_HOST_URL=mongodb://root:example@dataflow_mongo_db:27017
     ports:
